<?xml version="1.0"?>
<package>
  <name>tue_teleop_spacenav</name>
  <version>0.0.0</version>
  <description>The tue_teleop_spacenav package</description>
  <license>BSD</license>

  <maintainer email="timclephas@gmail.com">Tim Clephas</maintainer>

  <author email="timclephas@gmail.com">Tim Clephas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <run_depend>spacenav_node</run_depend>
  <run_depend>lcsr_tf_tools</run_depend>

</package>
